# hydra-demo

./: README.md  pyproject.toml
config/: config.yaml  hierarchical_config.yaml  local.yaml  remote.yaml
multirun/2024-01-28/18-15-51/: multirun.yaml
multirun/2024-01-28/18-15-51/0/.hydra/: config.yaml  hydra.yaml  overrides.yaml
multirun/2024-01-28/18-15-51/1/.hydra/: config.yaml  hydra.yaml  overrides.yaml
multirun/2024-01-28/18-15-51/2/.hydra/: config.yaml  hydra.yaml  overrides.yaml
multirun/2024-01-28/18-15-51/3/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2024-01-24/15-12-49/.hydra/: hydra.yaml
outputs/2024-01-24/15-13-27/.hydra/: config.yaml  hydra.yaml
outputs/2024-01-28/17-39-48/.hydra/: hydra.yaml
outputs/2024-01-28/19-58-08/.hydra/: hydra.yaml
project_config/: nn_experiment_config.yaml
src/: main.py  train.py
src/hydra-demo/: dataset_loader.py  main.py  simple_net.py  train.py
